# CMakeCatch2

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  mpMyFirstApp.cpp
Code/Lib/: CMakeLists.txt
Testing/: CMakeLists.txt  mpCatchMain.cpp
